==> ElrohirGT/RODOS-PortentaH7/rodos/src/bare-metal/efr32fg1p/hal/hal_pwm.cpp <==
#include <new>
#include "rodos.h"
#include "misc-rodos-funcs.h"
#include "hal/hal_pwm.h"
#include "em_gpio.h"
#include "em_timer.h"
#include "em_device.h"
#include "em_cmu.h"

int32_t HAL_PWM::init(uint32_t frequency, uint32_t increments) {

    
    if ((static_cast<int>(context->PwmIdx) < static_cast<int>(PWM_IDX00)) || (static_cast<int>(context->PwmIdx) > static_cast<int>(PWM_IDX53))) {
        return -1;
    }

    ReserveOutput result = pwmWatchdog.reserveTimerChannel((PWM_IDX)context->PwmIdx);
    if(result.reserved == false){
        PRINTF("ERROR: NO FREE TIMER FOUND \n");
        return -2;
    }

    context->setTimerAndChannel(result.output);
    context->PortAndPinFromIDX();
    context->setTimerRouteLoc(result.output);

    static char pwmInit[4] = { 0, 0, 0, 0 };

    char timerIdx = 1;

    context->timerClk = CMU_ClockFreqGet(context->timer_clock);
    context->increments = increments;
    context->Frequency = frequency;

	/**** configure GPIO for timer-Use ****/
    CMU_ClockEnable(cmuClock_GPIO, true);
    // Enable clock for TIMER module
    CMU_ClockEnable(context->timer_clock, true);


    // Configure TIMER1 Compare/Capture for output compare
    // Use PWM mode, which sets output on overflow and clears on compare events
    TIMER_InitCC_TypeDef timerCCInit = TIMER_INITCC_DEFAULT;
    timerCCInit.mode = timerCCModePWM;

    TIMER_InitCC(context->timer, context->channel, &timerCCInit);

    context->timer->ROUTELOC0 |=  context->TIMER_ROUTE_LOC;
    
    if(context->timer == TIMER1) timerIdx = 1;
    else if (context->timer == WTIMER0) timerIdx = 2;
    else if (context->timer == WTIMER1) timerIdx = 3;

	/* reset timer before new init, only if it's not already used as PWM source */
	if (pwmInit[timerIdx - 1] == 0) {
		//TIM_DeInit(context->timer);
		pwmInit[timerIdx - 1] = 1;
	}

    GPIO_PinModeSet(context->GPIO_Port, context->GPIO_Pin, gpioModePushPull, 0);

    context->updateSettings();
    // Initialize the timer
    TIMER_Init_TypeDef timerInit = TIMER_INIT_DEFAULT;
    TIMER_Init(context->timer, &timerInit);
    return 0;
}

int32_t HAL_PWM::config(PWM_PARAMETER_TYPE type, int32_t paramVal) {
    if ((static_cast<int>(context->PwmIdx) < static_cast<int>(PWM_IDX00)) || (static_cast<int>(context->PwmIdx) > static_cast<int>(PWM_IDX15))) {
        return -1;
    }

    switch (type) {
	case PWM_PARAMETER_INCREMENTS:{
	    //TODO: Implement
		//context->increments = static_cast<uint32_t>(paramVal);
		break;
	}
	case PWM_PARAMETER_FREQUENCY:
		// TODO: Implement
		//context->Frequency = static_cast<uint32_t>(paramVal);
		break;
	}

	context->updateSettings();
    // Initialize the timer
    TIMER_Init_TypeDef timerInit = TIMER_INIT_DEFAULT;
    TIMER_Init(context->timer, &timerInit);
	return 0;
}

void HAL_PWM::reset() {
	if ((static_cast<int>(context->PwmIdx) < static_cast<int>(PWM_IDX00)) || (static_cast<int>(context->PwmIdx) > static_cast<int>(PWM_IDX15))) {
        return;
    }

	// Reset Timer
	// FIXME: This disables all channels of this timer!
    TIMER_Reset(context->timer);
    GPIO_PinModeSet(context->GPIO_Port, context->GPIO_Pin, gpioModeDisabled, 0);

}

void HW_HAL_PWM::updateSettings(){
    if (Frequency == 0){
        // End, so that output is 0
        return;
    }else{
        // normal pwm mode
    }
    // Set top value to overflow at the desired PWM_FREQ frequency
    TIMER_TopSet(timer, CMU_ClockFreqGet(timer_clock) / Frequency);
    max_counter_increments = TIMER_TopGet(timer);

    increments = min(max_counter_increments, increments);

    duty_cycle_in_increments = 0; // default duty cycle = minimum = 0
    duty_cycle = static_cast<float>(duty_cycle_in_increments) / increments;
    uint32_t timer_compare_value = duty_cycle*static_cast<float>(max_counter_increments);

    switch (channel) {
    case TIM_CHAN0:
        // Set compare value for initial duty cycle
        TIMER_CompareSet(timer, 0, timer_compare_value);
        break; // channel 1 init
    case TIM_CHAN1:
        TIMER_CompareSet(timer, 1, timer_compare_value);
        break; // channel 2 init
    case TIM_CHAN2:
        TIMER_CompareSet(timer, 2, timer_compare_value);
        break; // channel 3 init
    case TIM_CHAN3:
        if(timer != WTIMER0) TIMER_CompareSet(timer, 3, timer_compare_value);
        break; // channel 4 init
    default:
        return;
    }

}
